--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ project/target
 target
 tmp
 activator-*.sbt
+.DS_Store
+.idea
+*.iml
+*.ipr
+*.log
+.sbtserver*
+sbt-ui.sbt
+classes/
+target/
+sbt-launch.jar
